overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,11 @@
 .circle-port:hover{
 	background: mediumpurple;
 }
+/* svg {
+  overflow: visible;
+}
+svg:root {
+  overflow: visible;
+}
+
+svg:not(:root) { overflow: visible; } */
